--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.15",
+        "tailwindcss": "^4.1.16",
         "vite": "^7.0.7"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.1",
-        "vue": "^3.5.22"
+        "vue": "^3.5.22",
+        "vue-router": "^4.6.3"
     }
 }
