--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   nginx:
     image: nginx:alpine
-    container_name: nginx
+    # container_name: nginx
     ports:
       - "8080:80"     
     volumes:
@@ -14,7 +14,7 @@ services:
 
   php:
     image: php:8.2-fpm-alpine
-    container_name: php-fpm
+    container_name: php-fpm-new
     volumes:
       - ./app:/var/www/html
     networks:
