--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,17 @@ services:
       - backend
 
   composer:
-    image: composer:2
-    working_dir: /var/www/html
+    image: composer:2.7
+    working_dir: /app
     volumes:
-      - ./:/app
-    networks:
-      - backend
+       - ./:/app
+  environment:
+    COMPOSER_ALLOW_SUPERUSER: 1
+    COMPOSER_DISABLE_XDEBUG_WARN: 1
+    COMPOSER_PLATFORM_PHP: 8.2.0
+  networks:
+    - backend
+
 
   mysql:
     image: mysql:8.0-oraclelinux8
