--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,23 +14,11 @@ services:
   php:
     image: php:8.2-fpm-alpine
     container_name: php-fpm-new
+    working_dir: /var/www/html
     volumes:
       - ./:/var/www/html
     networks:
       - backend
-
-  composer:
-    image: composer:2.7
-    working_dir: /app
-    volumes:
-       - ./:/app
-  environment:
-    COMPOSER_ALLOW_SUPERUSER: 1
-    COMPOSER_DISABLE_XDEBUG_WARN: 1
-    COMPOSER_PLATFORM_PHP: 8.2.0
-  networks:
-    - backend
-
 
   mysql:
     image: mysql:8.0-oraclelinux8
@@ -40,10 +28,19 @@ services:
       MYSQL_DATABASE: bd-rememberME
       MYSQL_USER: rememberME
       MYSQL_PASSWORD: PwRememberME
-    ports:
-      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - backend
+
+  composer:
+    image: composer:2.7
+    working_dir: /app
+    volumes:
+      - ./:/app
+    environment:
+      COMPOSER_ALLOW_SUPERUSER: 1
+      COMPOSER_PLATFORM_PHP: 8.2.0
     networks:
       - backend
 
