--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,46 @@
+version: "3.8"
+
 services:
+  app:
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    container_name: reminder-app
+    volumes:
+      - ./app:/var/www/html
+    depends_on:
+      - db
+    networks:
+      - reminder
+
   nginx:
     image: nginx:alpine
+    container_name: reminder-nginx
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./:/var/www/html:ro
+      - ./app:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - php
+      - app
     networks:
-      - backend
+      - reminder
 
-  php:
-    image: php:8.2-fpm-alpine
-    container_name: php-fpm-new
-    working_dir: /var/www/html
-    volumes:
-      - ./:/var/www/html
-    networks:
-      - backend
-
-  mysql:
-    image: mysql:8.0-oraclelinux8
-    container_name: mysql
+  db:
+    image: mysql:8.0
+    container_name: reminder-db
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: bd-rememberME
-      MYSQL_USER: rememberME
-      MYSQL_PASSWORD: PwRememberME
+      MYSQL_DATABASE: reminder
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: reminder
+      MYSQL_PASSWORD: reminder
     volumes:
-      - db_data:/var/lib/mysql
+      - dbdata:/var/lib/mysql
     networks:
-      - backend
-
-  composer:
-    image: composer:2.7
-    working_dir: /app
-    volumes:
-      - ./:/app
-    environment:
-      COMPOSER_ALLOW_SUPERUSER: 1
-      COMPOSER_PLATFORM_PHP: 8.2.0
-    networks:
-      - backend
-
-volumes:
-  db_data:
+      - reminder
 
 networks:
-  backend:
+  reminder:
+
+volumes:
+  dbdata:
