--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   app:
     build:
@@ -7,7 +5,7 @@ services:
       dockerfile: docker/php/Dockerfile
     container_name: reminder-app
     volumes:
-      - ./app:/var/www/html
+      - .:/var/www/html
     depends_on:
       - db
     networks:
@@ -19,7 +17,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./app:/var/www/html
+      - .:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
