--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,13 +10,13 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass app:9000;
+        fastcgi_pass reminder-app:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $DOCUMENT_ROOT$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    location ~ /\. {
+    location ~ /\.ht {
         deny all;
     }
 }
