--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.2-fpm
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
     curl \
@@ -8,12 +8,9 @@ RUN apt-get update && apt-get install -y \
     unzip \
     libpng-dev \
     libonig-dev \
-    libxml2-dev
-
-# PHP extensions Laravel
-RUN docker-php-ext-install pdo_mysql mbstring bcmath gd
-
-# Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+    libxml2-dev \
+    nodejs \
+    npm \
+    && docker-php-ext-install pdo pdo_mysql
 
 WORKDIR /var/www/html
